[tool.poetry]
name = "rp-poetry-tutorial"
version = "0.1.0"
description = "Code sample to test poetry functionalities"
authors = ["Thiago Strava Correa <thiago.strava.correa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.25.1"
beautifulsoup4 = "4.9.3"
certifi = "2020.12.5"
chardet = "4.0.0"
idna = "2.10"
soupsieve = "2.2.1"
urllib3 = "1.26.4"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
